--- a/Cubeagram/react-app/src/components/SinglePost/SinglePost.css
+++ b/Cubeagram/react-app/src/components/SinglePost/SinglePost.css
@@ -71,7 +71,7 @@
 
 
 .edit-delete-single-post-page {
-    margin-left: 80%;
+    margin-left: 90%;
 }
 
 #edit-pencil-single-post {
